--- a/src/man/man8/Makefile
+++ b/src/man/man8/Makefile
@@ -16,7 +16,10 @@
 #
 #	@(#)Makefile	5.4.7 (2.11BSD) 1997/1/10
 #
-MDIR=	/usr/man/cat8
+TOPSRC = $(shell cd ../../..; pwd)
+include $(TOPSRC)/target.mk
+
+MDIR=	/share/man/cat8
 SRCS=	XNSrouted.8 adduser.8 autoconfig.8 \
 	bugfiler.8 crash.8 \
 	boot.8 \
@@ -51,7 +54,7 @@ OBJS=	XNSrouted.0 adduser.0 autoconfig.0 \
 .SUFFIXES: .8 .0
 
 .8.0:
-	${DESTDIR}/usr/man/manroff $*.8 > $*.0
+	${MANROFF} $*.8 > $*.0
 
 all: _make_01
 
@@ -61,8 +64,7 @@ clean: FRC
 	rm -f ${OBJS}
 
 install: _make_01
-	install -c -o bin -g bin -m 444 ${OBJS} ${DESTDIR}${MDIR}
-	rm -f ${DESTDIR}${MDIR}/uucpd.0
-	ln ${DESTDIR}${MDIR}/uucico.0 ${DESTDIR}${MDIR}/uucpd.0
+	cp ${OBJS} ${DESTDIR}${MDIR}
+	ln -f ${DESTDIR}${MDIR}/uucico.0 ${DESTDIR}${MDIR}/uucpd.0
 
 FRC:
