--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,7 @@ include $(TOPSRC)/target.mk
 # Programs that live in subdirectories, and have makefiles of their own.
 #
 SUBDIR		= startup-$(MACHINE) libc libm libutil libtermlib libcurses \
-                  libvmf libwiznet share cmd games
+                  libvmf libwiznet share cmd games man
 
 all:		$(SUBDIR)
 
