Smaller C fixes and improvements: - move va_list type detection under #ifdef as it's rarely needed anyway - allow up to 254 characters in a string literal - generate a warning when an integer is passed instead of a pointer (and vice versa) as a function parameter (pass -Wall for this) - when printing an unexpected token, print identifier tokens instead of '<tokIdent>' - fix: allow most control characters inside '' and "" - fix handling of -I<path> and -SI<path> - switch() now supports Duff's device - for() now supports declarations in its first clause as in C99/C++

--- a/src/cmd/smlrc/Makefile
+++ b/src/cmd/smlrc/Makefile
@@ -3,7 +3,7 @@ include $(TOPSRC)/target.mk
 
 CFLAGS          = -Os -Wall -DMIPS -DNO_ANNOTATIONS -DNO_PREPROCESSOR \
                   -DNO_PPACK -D_RETROBSD -D__SMALLER_C_SCHAR__ \
-                  -D__SMALLER_C__ -D__SMALLER_C_32__
+                  -D__SMALLER_C__ -D__SMALLER_C_32__ -DSTATIC
 
 # For cross compile
 #include $(TOPSRC)/cross.mk
