Max32-eth configuration: SD card speed reduced to 10MHz. Now it works stable with MakerStudio SD card shield.

--- a/sys/pic32/max32-eth/Makefile
+++ b/sys/pic32/max32-eth/Makefile
@@ -52,6 +52,7 @@ DEFS += -DLED_KERNEL_PORT=TRISA
 DEFS += -DPIC32MX7
 DEFS += -DSD0_CS_PIN=14
 DEFS += -DSD0_CS_PORT=TRISC
+DEFS += -DSD0_MHZ=10
 DEFS += -DSD0_PORT=2
 DEFS += -DSPI_ENABLED=YES
 DEFS += -DUART1_BAUD=115200
