Using Max32 board with Arduino SD card shield as a default configuration.

--- a/sys/pic32/Makefile
+++ b/sys/pic32/Makefile
@@ -2,7 +2,7 @@
 # Programs that live in subdirectories, and have makefiles of their own.
 #
 SUBDIR		= baremetal duinomite duinomite-uart duinomite-e \
-                  duinomite-e-uart explorer16 max32 max32-eth maximite \
+                  duinomite-e-uart explorer16 max32 maximite \
                   meb starter-kit sdxl ubw32 ubw32-uart \
                   ubw32-uart-sdram baremetal fubarino mmb-mx7 maximite-color \
                   32mxsdram-uart picadillo wf32
