--- a/sys/pic32/mmb-mx7/Makefile
+++ b/sys/pic32/mmb-mx7/Makefile
@@ -6,24 +6,10 @@ S         = ../../../tools/configsys/../../sys/kernel
 vpath %.c $(M):$(S)
 vpath %.S $(M):$(S)
 
-KERNOBJ += adc.o clock.o cons.o devsw.o exception.o exec_aout.o exec_conf.o exec_elf.o exec_script.o exec_subr.o gpio.o init_main.o init_sysent.o kern_clock.o kern_descrip.o kern_exec.o kern_exit.o kern_fork.o kern_mman.o kern_proc.o kern_prot.o kern_prot2.o kern_resource.o kern_sig.o kern_sig2.o kern_subr.o kern_synch.o kern_sysctl.o kern_time.o machdep.o mem.o rd_sd.o rdisk.o signal.o spi_bus.o startup.o subr_prf.o subr_rmap.o swap.o sys_generic.o sys_inode.o sys_pipe.o sys_process.o syscalls.o sysctl.o tty.o tty_subr.o tty_tty.o uart.o ufs_alloc.o ufs_bio.o ufs_bmap.o ufs_dsort.o ufs_fio.o ufs_inode.o ufs_mount.o ufs_namei.o ufs_subr.o ufs_syscalls.o ufs_syscalls2.o usb_device.o usb_function_cdc.o usb_uart.o vers.o vfs_vnops.o vm_sched.o vm_swap.o vm_swp.o 
-EXTRA_TARGETS = bootloader 
+KERNOBJ += adc.o clock.o cons.o devcfg.o devsw.o exception.o exec_aout.o exec_conf.o exec_elf.o exec_script.o exec_subr.o gpio.o init_main.o init_sysent.o kern_clock.o kern_descrip.o kern_exec.o kern_exit.o kern_fork.o kern_mman.o kern_proc.o kern_prot.o kern_prot2.o kern_resource.o kern_sig.o kern_sig2.o kern_subr.o kern_synch.o kern_sysctl.o kern_time.o machdep.o mem.o rd_sd.o rdisk.o signal.o spi_bus.o startup.o subr_prf.o subr_rmap.o swap.o sys_generic.o sys_inode.o sys_pipe.o sys_process.o syscalls.o sysctl.o tty.o tty_subr.o tty_tty.o uart.o ufs_alloc.o ufs_bio.o ufs_bmap.o ufs_dsort.o ufs_fio.o ufs_inode.o ufs_mount.o ufs_namei.o ufs_subr.o ufs_syscalls.o ufs_syscalls2.o usb_device.o usb_function_cdc.o usb_uart.o vers.o vfs_vnops.o vm_sched.o vm_swap.o vm_swp.o 
+EXTRA_TARGETS = 
 
 DEFS += -DADC_ENABLED=YES
-DEFS += -DBL_BUTTON_PIN=10
-DEFS += -DBL_BUTTON_PORT=TRISA
-DEFS += -DBL_CLEAR_PIN=2
-DEFS += -DBL_CLEAR_PORT=TRISD
-DEFS += -DBL_CRYSTAL=8
-DEFS += -DBL_LED2_INVERT
-DEFS += -DBL_LED2_PIN=1
-DEFS += -DBL_LED2_PORT=TRISA
-DEFS += -DBL_LED3_INVERT
-DEFS += -DBL_LED3_PIN=9
-DEFS += -DBL_LED3_PORT=TRISD
-DEFS += -DBL_LED_INVERT
-DEFS += -DBL_LED_PIN=0
-DEFS += -DBL_LED_PORT=TRISA
 DEFS += -DBUS_DIV=1
 DEFS += -DBUS_KHZ='CPU_KHZ/BUS_DIV'
 DEFS += -DCONSOLE_DEVICE=ttyUSB0
@@ -59,16 +45,9 @@ DEFS += -DDC3_VBUSON=DEVCFG3_FVBUSONIO
 DEFS += -DEXEC_AOUT
 DEFS += -DEXEC_ELF
 DEFS += -DEXEC_SCRIPT
-DEFS += -DFLASH_JUMP=0x9d000000
 DEFS += -DGPIO_CLEAR_PIN=2
 DEFS += -DGPIO_CLEAR_PORT=TRISD
 DEFS += -DGPIO_ENABLED=YES
-DEFS += -DHID_FEATURE_REPORT_BYTES=2
-DEFS += -DHID_INPUT_REPORT_BYTES=2
-DEFS += -DHID_INT_IN_EP_SIZE=64
-DEFS += -DHID_INT_OUT_EP_SIZE=64
-DEFS += -DHID_OUTPUT_REPORT_BYTES=2
-DEFS += -DHID_RPT01_SIZE=29
 DEFS += -DKERNEL
 DEFS += -DLED_KERNEL_INVERT=YES
 DEFS += -DLED_KERNEL_PIN=0
@@ -87,7 +66,6 @@ DEFS += -DSD0_PORT=1
 DEFS += -DUART1_ENABLED=YES
 DEFS += -DUARTUSB_ENABLED=YES
 DEFS += -DUCB_METER
-DEFS += -DUSB_EP0_BUFF_SIZE=8
 DEFS += -DUSB_MAX_EP_NUMBER=3
 DEFS += -DUSB_NUM_STRING_DESCRIPTORS=3
 
