Kconfig: fixed function declarations.

--- a/tools/kconfig/Makefile
+++ b/tools/kconfig/Makefile
@@ -15,3 +15,9 @@ clean:
 
 $(PROG):	$(OBJS)
 		$(CC) $(LDFLAGS) -o $@ $(OBJS) $(LIBS)
+
+main.o: main.c y.tab.h config.h
+mkheaders.o: mkheaders.c config.h y.tab.h
+mkioconf.o: mkioconf.c y.tab.h config.h
+mkmakefile.o: mkmakefile.c y.tab.h config.h
+mkswapconf.o: mkswapconf.c config.h
